--- a/index.html
+++ b/index.html
@@ -2,40 +2,94 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Matej – Fotograf</title>
+  <title>Matej Lakatoš – Fotograf, Trenčín</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #0f0f0f;
-      color: white;
+      background: #0b0b0b;
+      color: #f2f2f2;
+    }
+
+    header {
+      padding: 80px 20px 50px;
       text-align: center;
     }
-    header {
-      padding: 60px 20px;
-    }
-    h1 {
-      font-size: 2.5rem;
+
+    header h1 {
+      font-size: 2.8rem;
       margin-bottom: 10px;
+      letter-spacing: 1px;
     }
-    p {
-      opacity: 0.8;
+
+    header p {
+      opacity: 0.75;
+      font-size: 1.1rem;
     }
+
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 16px;
       padding: 20px;
+      max-width: 1400px;
+      margin: auto;
     }
+
     .gallery img {
       width: 100%;
-      border-radius: 12px;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 14px;
+      transition: transform 0.3s ease, opacity 0.3s ease;
     }
+
+    .gallery img:hover {
+      transform: scale(1.03);
+      opacity: 0.9;
+    }
+
+    .cta {
+      text-align: center;
+      padding: 70px 20px 50px;
+    }
+
+    .cta h2 {
+      font-size: 1.8rem;
+      margin-bottom: 15px;
+    }
+
+    .cta p {
+      opacity: 0.75;
+      margin-bottom: 25px;
+    }
+
+    .cta a {
+      display: inline-block;
+      padding: 14px 28px;
+      border-radius: 30px;
+      background: white;
+      color: black;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    .cta a:hover {
+      background: #ddd;
+    }
+
     footer {
-      padding: 30px;
+      text-align: center;
+      padding: 30px 20px;
       font-size: 0.9rem;
-      opacity: 0.6;
+      opacity: 0.5;
     }
   </style>
 </head>
@@ -43,17 +97,34 @@
 
 <header>
   <h1>Matej</h1>
-  <p>Eventy • Portréty • Lifestyle</p>
+  <p>Eventy • Plesy • Birmovky</p>
 </header>
 
 <section class="gallery">
-  <img src="foto1.jpg">
-  <img src="foto2.jpg">
-  <img src="foto3.jpg">
+  <img src="">
+  <img src="B6.jpg">
+  <img src="DSC0046.jpg">
+  <img src="_LKT8309.jpg">
+  <img src="_DSC0393.jpg">
+  <img src="foto6.jpg">
+  <img src="foto7.jpg">
+  <img src="foto8.jpg">
+  <img src="foto9.jpg">
+  <img src="foto10.jpg">
+  <img src="foto11.jpg">
+  <img src="foto12.jpg">
+</section>
+
+<section class="cta">
+  <h2>Máš udalosť, ktorú chceš zachytiť kvalitne?</h2>
+  <p>Napíš mi a dohodneme spoluprácu</p>
+  <a href="https://instagram.com/TVÔJ_INSTAGRAM" target="_blank">
+    Kontaktuj ma
+  </a>
 </section>
 
 <footer>
-  © Matej · Instagram: @tvoj_ig
+  © Matej · Fotograf
 </footer>
 
 </body>
