--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <section class="cta">
   <h2>Máš udalosť, ktorú chceš zachytiť kvalitne?</h2>
   <p>Napíš mi a dohodneme spoluprácu</p>
-  <a href="https://instagram.com/TVÔJ_INSTAGRAM" target="_blank">
+  <a href="https://instagram.com/matej_lakatos" target="_blank">
     Kontaktuj ma
   </a>
 </section>
