--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </header>
 
 <section class="gallery">
-  <img src="">
+  <img src="1.jpg">
   <img src="B6.jpg">
   <img src="DSC0046.jpg">
   <img src="_LKT8309.jpg">
