--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #0b0b0b;
-      color: #f5f5f5;
+      background: #138b42b0b;
+      color:#8A2A00;
     }
 
     /* HERO */
@@ -30,7 +30,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background: rgba(138,42,0,0.45); /* JASNEJŠIA FOTKA */
+      background: rgba(0,0,0,0.45); /* JASNEJŠIA FOTKA */
     }
 
     .hero-content {
