--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #138b42b0b;
-      color:#8A2A00;
+      background: #0b0b0b;
+      color:#000000;
     }
 
     /* HERO */
