--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: #0b0b0b;
-      color:#000000;
+      color: #f5f5f5;
     }
 
     /* HERO */
