--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       position: absolute;
       inset: 0;
       background: rgba(0,0,0,0.45); /* JASNEJŠIA FOTKA */
+      text-align: center
+      pointer-events: none;
     }
 
     .hero-content {
