--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       inset: 0;
       background: rgba(0,0,0,0.45); /* JASNEJŠIA FOTKA */
       text-align: center
-      pointer-events: none;
+      pointer events: none;
     }
 
     .hero-content {
