--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
     }
 
     .hero::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.45); /* JASNEJŠIA FOTKA */
-      text-align: center
-      pointer events: none;
-    }
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.35); /* svetlejšie */
+  pointer-events: none; /* POVINNÉ */
+}
 
     .hero-content {
       position: relative;
