--- a/index.html
+++ b/index.html
@@ -213,17 +213,17 @@
 </section>
 
 <section class="gallery">
-  <img src="foto1.jpg" loading="lazy">
-  <img src="foto2.jpg" loading="lazy">
-  <img src="foto3.jpg" loading="lazy">
-  <img src="foto4.jpg" loading="lazy">
-  <img src="foto5.jpg" loading="lazy">
+  <img src="B6.jpg" loading="lazy">
+  <img src="_DSC0144 (1).jpg" loading="lazy">
+  <img src="_DSC0393.jpg" loading="lazy">
+  <img src="_DSC0670.jpg" loading="lazy">
+  <img src="_LKT8309.jpg" loading="lazy">
   <img src="foto6.jpg" loading="lazy">
   <img src="foto7.jpg" loading="lazy">
   <img src="foto8.jpg" loading="lazy">
   <img src="foto9.jpg" loading="lazy">
   <img src="foto10.jpg" loading="lazy">
-  <img src="foto11.jpg" loading="lazy">
+  <img src="godzone.24-19.jpg" loading="lazy">
   <img src="foto12.jpg" loading="lazy">
 </section>
 
