--- a/index.html
+++ b/index.html
@@ -17,70 +17,109 @@
 
     /* HERO */
     .hero {
-      position: relative;
-      height: 90vh;
-      background: url("hero.jpg") center/cover no-repeat;
-      background-attachment: fixed; /* STATICKÁ FOTKA */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+  position: relative;
+  height: 100vh;
+  background: url("hero.jpg") center / cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+}
 
-    .hero::after {
+.hero::after {
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.35); /* svetlejšie */
-  pointer-events: none; /* POVINNÉ */
+  background: rgba(0, 0, 0, 0.35); /* stmavenie */
+  pointer-events: none; /* 🔥 aby fungovali kliky */
 }
 
-    .hero-content {
-      position: relative;
-      text-align: center;
-      max-width: 800px;
-      padding: 20px;
-    }
+.hero-content {
+  position: relative;
+  z-index: 2;
+  max-width: 800px;
+  padding: 20px;
+}
 
-    .hero h1 {
-      font-size: 3.2rem;
-      margin-bottom: 6px;
-      letter-spacing: 1.5px;
-      color: #ffffff;
-    }
+.hero h1 {
+  font-size: 3rem;
+  margin-bottom: 10px;
+}
 
-    .hero p {
-      font-size: 1.3rem;
-      margin-bottom: 28px;
-      color: #eaeaea;
-      font-weight: 500;
-    }
+.hero h2 {
+  font-size: 1.4rem;
+  font-weight: 400;
+  opacity: 0.9;
+}
 
-    .contact-box {
-      margin-top: 20px;
-    }
+/* kontakt */
+.contact-box {
+  margin-top: 30px;
+}
 
-    .contact-text {
-      margin-bottom: 14px;
-      font-size: 1.05rem;
-      color: #f0f0f0;
-      font-weight: 500;
-    }
+.contact-text {
+  margin-bottom: 12px;
+  opacity: 0.85;
+}
 
-    .contact-links a {
-      display: inline-block;
-      margin: 6px;
-      padding: 13px 24px;
-      border-radius: 30px;
-      background: white;
-      color: black;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 0.95rem;
-    }
+.contact-links {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
-    .contact-links a:hover {
-      background: #e6e6e6;
-    }
+.contact-links a {
+  padding: 12px 18px;
+  border: 1px solid rgba(255,255,255,0.6);
+  border-radius: 25px;
+  color: white;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.contact-links a:hover {
+  background: white;
+  color: black;
+}
+
+/* šípka */
+.scroll-indicator {
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 50px;
+  border: 2px solid rgba(255,255,255,0.7);
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  padding-top: 8px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.scroll-indicator span {
+  width: 6px;
+  height: 10px;
+  background: white;
+  border-radius: 3px;
+  animation: scrollDown 1.5s infinite;
+}
+
+@keyframes scrollDown {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(18px);
+    opacity: 0;
+  }
+}
+
 
     /* ABOUT */
     .about {
@@ -175,10 +214,15 @@
 <section class="hero">
   <div class="hero-content">
     <h1>Matej Lakatoš</h1>
-    <p>Fotograf Trenčín</p>
+    <h2>Event fotograf Trenčín</h2>
 
-    <div class="contact-box">
-      <p class="contact-text">Kontaktujte ma tu👇:</p>
+     <div class="contact-box">
+      <p class="contact-text">Kontaktujte ma ;tu👇:</p>
+      <div class="contact-links">
+        <a href="tel:+421907323158">📞 Telefón</a>
+        <a href="mailto:matej.lakatos06@gmail.com">✉️ Email</a>
+        <a href="https://instagram.com/matej_lakatos" target="_blank">📸 Instagram</a> <div class="contact-box">
+      <p class="contact-text">Kontaktujte ma ;tu👇:</p>
       <div class="contact-links">
         <a href="tel:+421907323158">📞 Telefón</a>
         <a href="mailto:matej.lakatos06@gmail.com">✉️ Email</a>
@@ -186,7 +230,12 @@
       </div>
     </div>
   </div>
+
+  <div class="scroll-indicator" onclick="scrollDown()">
+    <span></span>
+  </div>
 </section>
+
 
 <section class="about">
   <p>
@@ -249,6 +298,13 @@
   lightbox.addEventListener("click", () => {
     lightbox.classList.remove("active");
   });
+
+  function scrollDown() {
+    const nextSection = document.querySelector('section + section');
+    if (nextSection) {
+      nextSection.scrollIntoView({ behavior: 'smooth' });
+    }
+  }
 </script>
 
 </body>
