--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <h2>Event fotograf Trenčín</h2>
 
      <div class="contact-box">
-      <p class="contact-text">Kontaktujte ma ;tu👇:</p>
+      <p class="contact-text">Kontaktujte ma tu👇 </p>
       <div class="contact-links">
         <a href="tel:+421907323158">📞 Telefón</a>
         <a href="mailto:matej.lakatos06@gmail.com">✉️ Email</a>
@@ -243,16 +243,16 @@
 
 <section class="reviews">
   <div class="review">
-    „Fotky z koncertu vystihli presne tú energiu, ktorú sme chceli zachovať.“
-    <span>— organizátor koncertu</span>
+    „Fotky z koncertu vystihli presne tú atmosféru, ktorú sme chceli zachovať.“
+    <span>A.N. — organizátor koncertu</span>
   </div>
   <div class="review">
     „Profesionálny prístup počas celého plesu, výsledné fotky mali veľký úspech.“
-    <span>— školský ples</span>
+    <span>I.K. — školský ples</span>
   </div>
   <div class="review">
     „Zachytené všetky dôležité momenty oslavy, komunikácia aj dodanie na jednotku.“
-    <span>— rodinná oslava</span>
+    <span>M.Š. — rodinná oslava</span>
   </div>
 </section>
 
