--- a/index.html
+++ b/index.html
@@ -244,24 +244,24 @@
 <section class="reviews">
   <div class="review">
     „Fotky z koncertu vystihli presne tú atmosféru, ktorú sme chceli zachovať.“
-    <span>A.N. — organizátor koncertu</span>
+    <span> — organizátor koncertu</span>
   </div>
   <div class="review">
     „Profesionálny prístup počas celého plesu, výsledné fotky mali veľký úspech.“
-    <span>I.K. — školský ples</span>
+    <span> — školský ples</span>
   </div>
   <div class="review">
     „Zachytené všetky dôležité momenty oslavy, komunikácia aj dodanie na jednotku.“
-    <span>M.Š. — rodinná oslava</span>
+    <span> — rodinná oslava</span>
   </div>
 </section>
 
 <section class="gallery">
   <img src="B6.jpg" loading="lazy">
-  <img src="_DSC0144 (1).jpg" loading="lazy">
-  <img src="_DSC0393.jpg" loading="lazy">
-  <img src="_DSC0670.jpg" loading="lazy">
-  <img src="_LKT8309.jpg" loading="lazy">
+  <img src="foto1.jpg" loading="lazy">
+  <img src="foto2.jpg" loading="lazy">
+  <img src="foto3.jpg" loading="lazy">
+  <img src="foto4.jpg" loading="lazy">
   <img src="foto6.jpg" loading="lazy">
   <img src="foto7.jpg" loading="lazy">
   <img src="foto8.jpg" loading="lazy">
