--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
+   
+   .section-divider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: 80px 0 30px;
+}
+
+.section-divider span {
+  width: 60px;        /* dĺžka čiary */
+  height: 1px;
+  background: rgba(255,255,255,0.35);
+}
+
+.section-divider h2 {
+  font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+ 
     * { box-sizing: border-box; }
 
     body {
