--- a/index.html
+++ b/index.html
@@ -6,72 +6,261 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-*{box-sizing:border-box}
-body{margin:0;font-family:Arial,sans-serif;background:#0b0b0b;color:#f5f5f5}
 
-/* MENU */
-.menu-btn{
-position:fixed;top:20px;left:20px;z-index:1001;
-font-size:26px;cursor:pointer
+/* ===== MENU ===== */
+.menu-btn {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  font-size: 28px;
+  cursor: pointer;
+  z-index: 1001;
+  color: white;
 }
-.menu{
-position:fixed;inset:0;background:#0b0b0b;
-transform:translateX(-100%);
-transition:.4s;z-index:1000;padding:80px 30px
+
+.menu {
+  position: fixed;
+  inset: 0;
+  background: #0b0b0b;
+  transform: translateX(-100%);
+  transition: 0.4s;
+  z-index: 1000;
+  padding: 80px 40px;
 }
-.menu.active{transform:translateX(0)}
-.menu ul{list-style:none;padding:0}
-.menu li{margin:20px 0;font-size:1.5rem;cursor:pointer}
-.submenu{margin-left:20px;font-size:1.1rem;display:none;opacity:.8}
-.menu li.open .submenu{display:block}
+
+.menu.active {
+  transform: translateX(0);
+}
+
+.menu a {
+  display: block;
+  margin: 25px 0;
+  font-size: 1.6rem;
+  color: white;
+  text-decoration: none;
+}
+
+.menu a:hover {
+  opacity: 0.7;
+}
+
+/* ===== TVOJ PÔVODNÝ ŠTÝL – NIČ NEVYHODENÉ ===== */
+
+.section-divider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: 80px 0 30px;
+}
+
+.section-divider span {
+  width: 60px;
+  height: 1px;
+  background: rgba(255,255,255,0.35);
+}
+
+.section-divider h2 {
+  font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+* { box-sizing: border-box; }
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #0b0b0b;
+  color: #f5f5f5;
+}
 
 /* HERO */
-.hero{
-height:100vh;background:url("hero.jpg") center/cover no-repeat;
-display:flex;align-items:center;justify-content:center;
-text-align:center;position:relative
+.hero {
+  position: relative;
+  height: 100vh;
+  background: url("hero.jpg") center / cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
 }
-.hero::after{
-content:"";position:absolute;inset:0;
-background:rgba(0,0,0,.3)
-}
-.hero-content{position:relative;z-index:2}
-.hero h1{font-size:3rem}
-.hero h2{opacity:.9}
 
-/* CONTACT */
-.contact-links a{
-display:inline-block;margin:8px;padding:12px 18px;
-border:1px solid #fff;border-radius:25px;
-color:#fff;text-decoration:none
+.hero::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.35);
+  pointer-events: none;
 }
-.contact-links a:hover{background:#fff;color:#000}
 
-/* SECTIONS */
-section{padding:80px 20px;text-align:center}
-.gallery{
-display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-gap:16px;max-width:1200px;margin:auto
+.hero-content {
+  position: relative;
+  z-index: 2;
+  max-width: 800px;
+  padding: 20px;
 }
-.gallery img{width:100%;border-radius:14px;cursor:pointer}
 
-/* LIGHTBOX */
-.lightbox{
-position:fixed;inset:0;background:rgba(0,0,0,.95);
-display:none;align-items:center;justify-content:center;z-index:2000
+.hero h1 {
+  font-size: 3rem;
+  margin-bottom: 10px;
 }
-.lightbox.active{display:flex}
-.lightbox img{max-width:90%;max-height:90%}
 
-/* CENNIK */
-table{margin:auto;border-collapse:collapse}
-td,th{border:1px solid #444;padding:12px 20px}
+.hero h2 {
+  font-size: 1.4rem;
+  font-weight: 400;
+  opacity: 0.9;
+}
+
+/* kontakt */
+.contact-box {
+  margin-top: 30px;
+}
+
+.contact-text {
+  margin-bottom: 12px;
+  opacity: 0.85;
+}
+
+.contact-links {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.contact-links a {
+  padding: 12px 18px;
+  border: 1px solid rgba(255,255,255,0.6);
+  border-radius: 25px;
+  color: white;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.contact-links a:hover {
+  background: white;
+  color: black;
+}
+
+/* šípka */
+.scroll-indicator {
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 50px;
+  border: 2px solid rgba(255,255,255,0.7);
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  padding-top: 8px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.scroll-indicator span {
+  width: 6px;
+  height: 10px;
+  background: white;
+  border-radius: 3px;
+  animation: scrollDown 1.5s infinite;
+}
+
+@keyframes scrollDown {
+  from { transform: translateY(0); opacity: 1; }
+  to { transform: translateY(18px); opacity: 0; }
+}
 
 /* ABOUT */
-.about-img{
-width:160px;height:160px;border-radius:50%;
-object-fit:cover;margin-bottom:20px
+.about {
+  max-width: 900px;
+  margin: 90px auto 40px;
+  padding: 0 20px;
+  text-align: center;
 }
+
+.about p {
+  opacity: 0.8;
+  line-height: 1.7;
+  font-size: 1.08rem;
+}
+
+/* REVIEWS */
+.reviews {
+  max-width: 1000px;
+  margin: 60px auto;
+  padding: 0 20px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+}
+
+.review {
+  background: #161616;
+  padding: 25px;
+  border-radius: 14px;
+  font-size: 0.95rem;
+}
+
+.review span {
+  display: block;
+  margin-top: 12px;
+  font-weight: bold;
+  opacity: 0.75;
+}
+
+/* GALLERY */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 16px;
+  padding: 20px;
+  max-width: 1400px;
+  margin: auto;
+}
+
+.gallery img {
+  width: 100%;
+  border-radius: 14px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.gallery img:hover {
+  transform: scale(1.03);
+}
+
+/* LIGHTBOX */
+.lightbox {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.95);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+
+.lightbox img {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
+}
+
+.lightbox.active {
+  display: flex;
+}
+
+footer {
+  text-align: center;
+  padding: 40px 20px;
+  font-size: 0.9rem;
+  opacity: 0.55;
+}
+
 </style>
 </head>
 
@@ -80,99 +269,104 @@ object-fit:cover;margin-bottom:20px
 <!-- MENU -->
 <div class="menu-btn" onclick="toggleMenu()">☰</div>
 <nav class="menu" id="menu">
-<ul>
-<li onclick="scrollToId('gallery-main')">Galéria ▾
-  <div class="submenu">
-    <div onclick="scrollToId('plesy')">Plesy</div>
-    <div onclick="scrollToId('koncerty')">Koncerty</div>
-    <div onclick="scrollToId('ine')">Iné</div>
-  </div>
-</li>
-<li onclick="scrollToId('cennik')">Cenník</li>
-<li onclick="scrollToId('about')">About</li>
-<li onclick="scrollToId('kontakt')">Kontakt</li>
-</ul>
+  <a href="galeria.html">Galéria</a>
+  <a href="cennik.html">Cenník</a>
+  <a href="about.html">About</a>
+  <a href="kontakt.html">Kontakt</a>
 </nav>
 
-<!-- HERO -->
 <section class="hero">
-<div class="hero-content">
-<h1>Matej Lakatoš</h1>
-<h2>Event fotograf Trenčín</h2>
-<div class="contact-links">
-<a href="tel:+421907323158">📞 Telefón</a>
-<a href="mailto:matej.lakatos06@gmail.com">✉️ Email</a>
-<a href="https://instagram.com/matej_lakatos" target="_blank">📸 Instagram</a>
-</div>
-</div>
+  <div class="hero-content">
+    <h1>Matej Lakatoš</h1>
+    <h2>Event fotograf Trenčín</h2>
+
+    <div class="contact-box">
+      <p class="contact-text">Kontaktujte ma tu👇 </p>
+      <div class="contact-links">
+        <a href="tel:+421907323158">📞 Telefón</a>
+        <a href="mailto:matej.lakatos06@gmail.com">✉️ Email</a>
+        <a href="https://instagram.com/matej_lakatos" target="_blank">📸 Instagram</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="scroll-indicator" onclick="scrollDown()">
+    <span></span>
+  </div>
 </section>
 
-<!-- ABOUT -->
-<section id="about">
-<img src="about.jpg" class="about-img">
-<p>TEXT O MNE SI DOPÍŠ</p>
+<section class="about">
+  <p>
+    Som fotograf zameraný na koncerty, plesy a spoločenské udalosti.
+    Zachytávam atmosféru, emócie a dôležité momenty tak,
+    aby mali hodnotu aj po rokoch.
+    Pracujem spoľahlivo, rýchlo a s citom pre detail.
+  </p>
 </section>
 
-<!-- GALÉRIA -->
-<section id="gallery-main">
-<h2 id="plesy">Plesy</h2>
-<div class="gallery">
-<img src="foto1.jpg">
-<img src="foto2.jpg">
-</div>
-
-<h2 id="koncerty">Koncerty</h2>
-<div class="gallery">
-<img src="foto3.jpg">
-<img src="foto4.jpg">
-</div>
-
-<h2 id="ine">Iné</h2>
-<div class="gallery">
-<img src="foto6.jpg">
-<img src="foto7.jpg">
-</div>
+<section class="reviews">
+  <div class="review">
+    „Fotky z koncertu vystihli presne tú atmosféru, ktorú sme chceli zachovať.“
+    <span> — organizátor koncertu</span>
+  </div>
+  <div class="review">
+    „Profesionálny prístup počas celého plesu, výsledné fotky mali veľký úspech.“
+    <span> — školský ples</span>
+  </div>
+  <div class="review">
+    „Zachytené všetky dôležité momenty oslavy, komunikácia aj dodanie na jednotku.“
+    <span> — rodinná oslava</span>
+  </div>
 </section>
 
-<!-- CENNIK -->
-<section id="cennik">
-<h2>Cenník</h2>
-<table>
-<tr><td>Plesy, stužkové</td><td>200 €</td></tr>
-<tr><td>Birmovka, 1. sv. prijímanie</td><td>100 €</td></tr>
-<tr><td>Oslava / iné</td><td>50 €</td></tr>
-</table>
-<p>TEXT SI DOPÍŠ</p>
+<section class="gallery">
+  <img src="B6.jpg" loading="lazy">
+  <img src="foto1.jpg" loading="lazy">
+  <img src="foto2.jpg" loading="lazy">
+  <img src="foto3.jpg" loading="lazy">
+  <img src="foto4.jpg" loading="lazy">
+  <img src="foto6.jpg" loading="lazy">
+  <img src="foto7.jpg" loading="lazy">
+  <img src="foto8.jpg" loading="lazy">
+  <img src="foto9.jpg" loading="lazy">
+  <img src="foto10.jpg" loading="lazy">
+  <img src="godzone.24-19.jpg" loading="lazy">
+  <img src="foto12.jpg" loading="lazy">
 </section>
 
-<!-- KONTAKT -->
-<section id="kontakt">
-<h2>Kontakt</h2>
-<div class="contact-links">
-<a href="tel:+421907323158">📞 Telefón</a>
-<a href="mailto:matej.lakatos06@gmail.com">✉️ Email</a>
-<a href="https://instagram.com/matej_lakatos" target="_blank">📸 Instagram</a>
+<div class="lightbox" id="lightbox">
+  <img src="" alt="">
 </div>
-</section>
 
-<!-- LIGHTBOX -->
-<div class="lightbox" id="lightbox"><img></div>
+<footer>
+  © Matej Lakatoš · Fotograf Trenčín
+</footer>
 
 <script>
-function toggleMenu(){
-document.getElementById("menu").classList.toggle("active")
+function toggleMenu() {
+  document.getElementById("menu").classList.toggle("active");
 }
-function scrollToId(id){
-toggleMenu()
-document.getElementById(id).scrollIntoView({behavior:"smooth"})
+
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = lightbox.querySelector("img");
+
+document.querySelectorAll(".gallery img").forEach(img => {
+  img.addEventListener("click", () => {
+    lightboxImg.src = img.src;
+    lightbox.classList.add("active");
+  });
+});
+
+lightbox.addEventListener("click", () => {
+  lightbox.classList.remove("active");
+});
+
+function scrollDown() {
+  const nextSection = document.querySelector('section + section');
+  if (nextSection) {
+    nextSection.scrollIntoView({ behavior: 'smooth' });
+  }
 }
-document.querySelectorAll(".gallery img").forEach(img=>{
-img.onclick=()=>{
-document.getElementById("lightbox").classList.add("active")
-document.querySelector(".lightbox img").src=img.src
-}
-})
-document.getElementById("lightbox").onclick=()=>lightbox.classList.remove("active")
 </script>
 
 </body>
