--- a/galeria.html
+++ b/galeria.html
@@ -175,20 +175,41 @@ footer {
 
 <!-- GALLERY -->
 <section class="gallery">
-  <!-- PLESY -->
-  <img src="ples1.jpg" data-category="plesy">
-  <img src="ples2.jpg" data-category="plesy">
-  <img src="ples3.jpg" data-category="plesy">
+
+  <!-- EVENTY -->
+  <img src="ine1.jpg" data-category="eventy">
+  <img src="ine2.jpg" data-category="eventy">
+  <img src="ine3.jpg" data-category="eventy">
+  <img src="ine4.jpg" data-category="eventy">
+  <img src="ine5.jpg" data-category="eventy">
+  <img src="ine6.jpg" data-category="eventy">
+  <img src="ine7.jpg" data-category="eventy">
+  <img src="ine8.jpg" data-category="eventy">
+  <img src="ine9.jpg" data-category="eventy">
+  <img src="ine10.jpg" data-category="eventy">
+  <img src="ine11.jpg" data-category="eventy">
+  <img src="ine12.jpg" data-category="eventy">
+  <img src="ine13.jpg" data-category="eventy">
 
   <!-- KONCERTY -->
   <img src="koncert1.jpg" data-category="koncerty">
   <img src="koncert2.jpg" data-category="koncerty">
   <img src="koncert3.jpg" data-category="koncerty">
+  <img src="koncert4.jpg" data-category="koncerty">
+  <img src="koncert5.jpg" data-category="koncerty">
+  <img src="koncert6.jpg" data-category="koncerty">
+  <img src="koncert7.jpg" data-category="koncerty">
+  <img src="koncert8.jpg" data-category="koncerty">
+  <img src="koncert9.jpg" data-category="koncerty">
+  <img src="koncert10.jpg" data-category="koncerty">
+  <img src="koncert11.jpg" data-category="koncerty">
+  <img src="koncert12.jpg" data-category="koncerty">
 
-  <!-- INÉ -->
-  <img src="ine1.jpg" data-category="ine">
-  <img src="ine2.jpg" data-category="ine">
-  <img src="ine3.jpg" data-category="ine">
+  <!-- PLESY -->
+  <img src="ples1.jpg" data-category="plesy">
+  <img src="ples2.jpg" data-category="plesy">
+  <img src="ples3.jpg" data-category="plesy">
+
 </section>
 
 <!-- LIGHTBOX -->
