--- a/galeria.html
+++ b/galeria.html
@@ -204,6 +204,7 @@ footer {
   <img src="koncert10.jpg" data-category="koncerty">
   <img src="koncert11.jpg" data-category="koncerty">
   <img src="koncert12.jpg" data-category="koncerty">
+   <img src="koncert13.jpg" data-category="koncerty">
 
   <!-- PLESY -->
   <img src="ples1.jpg" data-category="plesy">
