--- a/cennik.html
+++ b/cennik.html
@@ -159,9 +159,7 @@
 
   <div class="note-box">
     <!-- sem si dopíšeš vlastný text -->
-    Tu si môžeš doplniť podrobnosti o cenách, čo je v balíku,
-    individuálne dohody, cestovné, dĺžku fotenia alebo čokoľvek,
-    čo chceš klientom vysvetliť.
+   Ceny sú len oreintačné, pretože závisia od dĺžky príprav, samotného fotenia a počtu fotiek. Na výslednej cena sa určite dohodneme spolu.
   </div>
 
   <div style="text-align:center;">
