--- a/galeria.html
+++ b/galeria.html
@@ -170,7 +170,7 @@ footer {
   <button class="active" onclick="filterGallery('all')">Všetko</button>
   <button onclick="filterGallery('plesy')">Plesy</button>
   <button onclick="filterGallery('koncerty')">Koncerty</button>
-  <button onclick="filterGallery('ine')">Eveny</button>
+  <button onclick="filterGallery('ine')">Eventy</button>
 </div>
 
 <!-- GALLERY -->
