--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
+<meta name="robots" content="index, follow">
 <meta charset="UTF-8">
 <title>Matej Lakatoš – Fotograf Trenčín</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
