--- a/about.html
+++ b/about.html
@@ -117,9 +117,14 @@
 
   <div class="about-text">
     <!-- TENTO TEXT SI MÔŽEŠ UPRAVIŤ -->
-    Som fotograf zameraný na koncerty, plesy a spoločenské udalosti.
-    Fotografia je pre mňa spôsob, ako zachytiť atmosféru, emócie
-    a autentické momenty, ktoré sa už neopakujú.
+    <p>
+Som <strong>event fotograf z Trenčína</strong> so zameraním na
+<strong>koncerty, plesy a spoločenské udalosti</strong>.
+Zachytávam atmosféru, emócie a dôležité momenty tak,
+aby mali hodnotu aj po rokoch.
+Fotím v <strong>Trenčíne a okolí</strong>,
+pracujem spoľahlivo, rýchlo a s citom pre detail.
+    </p>.
 
     <br><br>
 
