--- a/galeria.html
+++ b/galeria.html
@@ -145,6 +145,18 @@ footer {
   font-size: 0.9rem;
   opacity: 0.55;
 }
+
+  .gallery h3 {
+  margin-top: 60px;
+  font-size: 1.6rem;
+}
+
+.gallery p {
+  max-width: 800px;
+  margin: 10px auto 30px;
+  opacity: 0.75;
+}
+  
 </style>
 </head>
 
@@ -177,6 +189,12 @@ footer {
 <section class="gallery">
 
   <!-- EVENTY -->
+    <h3>Eventy</h3>
+  <p>
+    Reportážne fotografie zo spoločenských podujatí, osláv a verejných akcií.
+    Zachytávam prirodzené momenty, atmosféru a detaily, ktoré tvoria príbeh udalosti.
+    Fotografovanie prebieha najmä v Trenčíne a okolí.
+  </p>
   <img src="ine1.jpg" data-category="eventy">
   <img src="ine2.jpg" data-category="eventy">
   <img src="ine4.jpg" data-category="eventy">
@@ -190,6 +208,12 @@ footer {
   <img src="ine13.jpg" data-category="eventy">
 
   <!-- KONCERTY -->
+  <h3>Koncerty</h3>
+  <p>
+    Koncertná fotografia zameraná na energiu, emócie a autentickú atmosféru vystúpení.
+    Fotím menšie aj väčšie koncerty, pódiové momenty aj reakcie publika.
+  </p>
+  
   <img src="koncert1.jpg" data-category="koncerty">
   <img src="koncert2.jpg" data-category="koncerty">
   <img src="koncert3.jpg" data-category="koncerty">
@@ -204,6 +228,11 @@ footer {
   <img src="koncert12.jpg" data-category="koncerty">
 
   <!-- PLESY -->
+  <h3>Plesy</h3>
+  <p>
+    Fotografie z plesov a formálnych spoločenských udalostí.
+    Dôraz kladiem na eleganciu, emócie a dôležité momenty večera.
+  </p>
   <img src="ples1.jpg" data-category="plesy">
   <img src="ples2.jpg" data-category="plesy">
   <img src="ples3.jpg" data-category="plesy">
