--- a/kontakt.html
+++ b/kontakt.html
@@ -111,6 +111,10 @@
   <p>Matej Lakatoš · Fotograf Trenčín</p>
 </header>
 
+  <p class="contact-text">
+Fotografické služby – Trenčín a okolie
+  </p>
+  
 <main class="content">
 
   <p class="intro">
