--- a/galeria.html
+++ b/galeria.html
@@ -156,6 +156,17 @@ footer {
   font-size: 0.9rem;
   opacity: 0.55;
 }
+  /* ===== SCROLL ANIMATIONS ===== */
+.reveal {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.8s ease;
+}
+
+.reveal.active {
+  opacity: 1;
+  transform: translateY(0);
+}
 </style>
 </head>
 
