--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
+  <header class="header reveal">
 <meta name="robots" content="index, follow">
 <meta charset="UTF-8">
 <title>Matej Lakatoš – Fotograf Trenčín</title>
@@ -331,6 +332,7 @@ footer {
 </section>
 
 <section class="gallery">
+  <section class="gallery reveal">
   <img src="B6.jpg" loading="lazy">
   <img src="foto1.jpg" loading="lazy">
   <img src="foto2.jpg" loading="lazy">
