--- a/index.html
+++ b/index.html
@@ -380,6 +380,23 @@ function scrollDown() {
     nextSection.scrollIntoView({ behavior: 'smooth' });
   }
 }
+  <script>
+/* ===== SCROLL REVEAL ===== */
+const reveals = document.querySelectorAll(".reveal");
+
+function revealOnScroll() {
+  const windowHeight = window.innerHeight;
+  reveals.forEach(el => {
+    const elementTop = el.getBoundingClientRect().top;
+    if (elementTop < windowHeight - 100) {
+      el.classList.add("active");
+    }
+  });
+}
+
+window.addEventListener("scroll", revealOnScroll);
+revealOnScroll();
+</script>
 </script>
 
 </body>
