--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 <meta name="robots" content="index, follow">
 <meta charset="UTF-8">
 <title>Matej Lakatoš – Fotograf Trenčín</title>
