--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
+  <title>Matej Lakatoš – Fotograf | Eventy, koncerty, plesy | Trenčín</title>
+
+<meta name="description" content="Profesionálny fotograf z Trenčína. Fotím eventy, koncerty, plesy, oslavy a spoločenské podujatia. Prirodzené momenty, emócie a kvalitné spracovanie.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 <meta name="robots" content="index, follow">
 <meta charset="UTF-8">
