--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <meta charset="UTF-8">
 <title>Matej Lakatoš – Fotograf Trenčín</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<meta property="og:title" content="Matej Lakatoš – Fotograf">
+<meta property="og:description" content="Eventy, koncerty, plesy a spoločenské podujatia. Fotograf Trenčín a okolie.">
+<meta property="og:image" content="https://tvoja-domena.sk/og-image.jpg">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://tvoja-domena.sk/">
 <style>
 
 /* ===== MENU ===== */
