--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
 <meta property="og:image" content="https://tvoja-domena.sk/og-image.jpg">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://tvoja-domena.sk/">
+  <!-- SEO basic -->
+<title>Matej Lakatoš | Event fotograf</title>
+<meta name="description" content="Eventový fotograf z Trenčína. Fotím koncerty, plesy a spoločenské udalosti s dôrazom na emócie a atmosféru.">
+
+<!-- Open Graph (Facebook, Messenger, WhatsApp, IG DM) -->
+<meta property="og:title" content="Matej Lakatoš | Event fotograf">
+<meta property="og:description" content="Profesionálne fotenie koncertov, plesov a eventov v Trenčíne a okolí.">
+<meta property="og:image" content="https://matejlakatos.online/og-image.jpg">
+<meta property="og:url" content="https://matejlakatos.online/">
+<meta property="og:type" content="website">
+
+<!-- Twitter / X -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Matej Lakatoš | Event fotograf">
+<meta name="twitter:description" content="Eventový fotograf – koncerty, plesy, oslavy.">
+<meta name="twitter:image" content="https://matejlakatos.online/og-image.jpg">
+
+<!-- Favicon -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <style>
+
 
 /* ===== MENU ===== */
 .menu-btn {
