--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta property="og:title" content="Matej Lakatoš – Fotograf">
 <meta property="og:description" content="Eventy, koncerty, plesy a spoločenské podujatia. Fotograf Trenčín a okolie.">
-<meta property="og:image" content="https://tvoja-domena.sk/og-image.jpg">
+<meta property="og:image" content="https://matejlakatos.online/og-image.jpg">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://tvoja-domena.sk/">
   <!-- SEO basic -->
