--- a/index.html
+++ b/index.html
@@ -1,38 +1,28 @@
-<!DOCTYPE html>
-<html lang="sk">
 <head>
-  <title>Matej Lakatoš – Fotograf | Eventy, koncerty, plesy | Trenčín</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="description" content="Profesionálny fotograf z Trenčína. Fotím eventy, koncerty, plesy, oslavy a spoločenské podujatia. Prirodzené momenty, emócie a kvalitné spracovanie.">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-<meta name="robots" content="index, follow">
-<meta charset="UTF-8">
-<title>Matej Lakatoš – Fotograf Trenčín</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:title" content="Matej Lakatoš – Fotograf">
-<meta property="og:description" content="Eventy, koncerty, plesy a spoločenské podujatia. Fotograf Trenčín a okolie.">
-<meta property="og:image" content="https://matejlakatos.online/og-image.jpg">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://tvoja-domena.sk/">
-  <!-- SEO basic -->
-<title>Matej Lakatoš | Event fotograf</title>
-<meta name="description" content="Eventový fotograf z Trenčína. Fotím koncerty, plesy a spoločenské udalosti s dôrazom na emócie a atmosféru.">
+  <title>Matej Lakatoš | Event fotograf – Trenčín</title>
 
-<!-- Open Graph (Facebook, Messenger, WhatsApp, IG DM) -->
-<meta property="og:title" content="Matej Lakatoš | Event fotograf">
-<meta property="og:description" content="Profesionálne fotenie koncertov, plesov a eventov v Trenčíne a okolí.">
-<meta property="og:image" content="https://matejlakatos.online/og-image.jpg">
-<meta property="og:url" content="https://matejlakatos.online/">
-<meta property="og:type" content="website">
+  <meta name="description" content="Profesionálny eventový fotograf z Trenčína. Fotím koncerty, plesy a spoločenské podujatia s dôrazom na emócie a atmosféru.">
+  <meta name="robots" content="index, follow">
 
-<!-- Twitter / X -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Matej Lakatoš | Event fotograf">
-<meta name="twitter:description" content="Eventový fotograf – koncerty, plesy, oslavy.">
-<meta name="twitter:image" content="https://matejlakatos.online/og-image.jpg">
+  <!-- Open Graph -->
+  <meta property="og:title" content="Matej Lakatoš | Event fotograf">
+  <meta property="og:description" content="Eventy, koncerty, plesy a spoločenské podujatia. Fotograf Trenčín a okolie.">
+  <meta property="og:image" content="https://matejlakatos.online/og-image.jpg">
+  <meta property="og:url" content="https://matejlakatos.online/">
+  <meta property="og:type" content="website">
 
-<!-- Favicon -->
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Matej Lakatoš | Event fotograf">
+  <meta name="twitter:description" content="Profesionálne fotenie koncertov, plesov a eventov.">
+  <meta name="twitter:image" content="https://matejlakatos.online/og-image.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+</head>
 <style>
 
 
