--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ footer {
 <section class="hero">
   <div class="hero-content">
     <h1>Matej Lakatoš</h1>
-    <h2>Event fotograf Trenčín · koncerty · plesy · spoločenské udalosti</h2>
+    <h2>Event fotograf Trenčín · Koncerty · Plesy · Spoločenské udalosti</h2>
 
     <div class="contact-box">
       <p class="contact-text">Kontaktujte ma tu👇 </p>
