pridanie slotov na plesy v galeria.html

--- a/galeria.html
+++ b/galeria.html
@@ -248,6 +248,11 @@ footer {
   <img src="ples1.jpg" data-category="plesy">
   <img src="ples2.jpg" data-category="plesy">
   <img src="ples3.jpg" data-category="plesy">
+  <img src="ples4.jpg" data-category="plesy">
+  <img src="ples5.jpg" data-category="plesy">
+  <img src="ples6.jpg" data-category="plesy">
+  <img src="ples7.jpg" data-category="plesy">
+  <img src="ples8.jpg" data-category="plesy">
 
 </section>
 
