--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@ footer {
 <div class="menu-btn" onclick="toggleMenu()">☰</div>
 <nav class="menu" id="menu">
   <a href="galeria.html">Galéria</a>
+  <a href="cennik.html">Cenník služieb</a>
   <a href="about.html">About</a>
   <a href="kontakt.html">Kontakt</a>
 </nav>
